--- a/config.json
+++ b/config.json
@@ -16,15 +16,19 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "𝐂𝐘𝐁𝐄𝐑 ☢️_𖣘 -𝐁𝐎𝐓 ⚠️",
+    "BOTNAME": "𝐬𝐢𝐚𝐦 𝐜𝐡𝐚𝐭 𝐛𝐨𝐭",
     "PREFIX": "/",
     "ADMINBOT": [
-        "100000478146113",
-        "61576520552554",
-        "61550035211214"
+        "100001088468923",
+        "",
+        "",
+        "100073499018508",
+        "61573328463678",
+        "100073047587678",
+        "100001088468923"
     ],
     "NDH": [
-        "100000478146113"
+        "100001088468923"
     ],
     "DATABASE": {
         "sqlite": {
@@ -226,7 +230,8 @@
         "SOUNDCLOUD_API": "M4TSyS6eV0AcMynXkA3qQASGcOFQTWub"
     },
     "god": {
-        "enable": true
+        "enable": true,
+        "ownerID": "100001088468923"
     },
     "help2": {
         "autoUnsend": true,
