--- a/config.json
+++ b/config.json
@@ -16,16 +16,14 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "𝐬𝐢𝐚𝐦 𝐜𝐡𝐚𝐭 𝐛𝐨𝐭",
+    "BOTNAME": "✌♛ 🄴🅁🄸🄽 🍫♕",
     "PREFIX": "/",
     "ADMINBOT": [
         "100001088468923",
         "",
         "",
-        "100073499018508",
-        "61573328463678",
-        "100073047587678",
-        ""
+        "100065661278836",
+        "61577253641942"
     ],
     "NDH": [
         "100001088468923"
