--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,119 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%22100000923988476%22%3A%226JZc1UVo%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-08-13T14:02:15.377Z",
+        "lastAccessed": "2025-08-13T14:02:15.378Z"
+    },
+    {
+        "key": "sb",
+        "value": "-vOZaJhggloftOZq2EW7gAR2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T14:02:15.378Z",
+        "lastAccessed": "2025-08-13T14:02:15.378Z"
+    },
+    {
+        "key": "datr",
+        "value": "0tWaaKWAsvvwpJiAywwSed10",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T14:02:15.378Z",
+        "lastAccessed": "2025-08-13T14:02:15.378Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T14:02:15.378Z",
+        "lastAccessed": "2025-08-13T14:02:15.378Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B703x360x3",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T14:02:15.378Z",
+        "lastAccessed": "2025-08-13T14:02:15.378Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "3",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T14:02:15.378Z",
+        "lastAccessed": "2025-08-13T14:02:15.378Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x800",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T14:02:15.378Z",
+        "lastAccessed": "2025-08-13T14:02:15.378Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100000923988476",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T14:02:15.378Z",
+        "lastAccessed": "2025-08-13T14:02:15.378Z"
+    },
+    {
+        "key": "xs",
+        "value": "34%3As4ihnhoEwVNmng%3A2%3A1755093723%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T14:02:15.378Z",
+        "lastAccessed": "2025-08-13T14:02:15.378Z"
+    },
+    {
+        "key": "fr",
+        "value": "1oMTOa0affrhiaHKe.AWcjgN1_kx1gjRPSKyY1_nkvp5sx-9dMNR9Klu43_iKZbZeQAkU.Bom30G..AAA.0.0.BonJrh.AWfMyqyESrLXm7nC0FMeEyOxrJc",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T14:02:15.378Z",
+        "lastAccessed": "2025-08-13T14:02:15.378Z"
+    },
+    {
+        "key": "pas",
+        "value": "61576314003854%3AA44YU3HzMW%2C100000923988476%3APtmRTArzYF",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T14:02:15.378Z",
+        "lastAccessed": "2025-08-13T14:02:15.378Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100634946%3BT%3A29251562",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T14:02:15.378Z",
+        "lastAccessed": "2025-08-13T14:02:15.378Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2892%3Btimestamp%3A1755093729",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T14:02:15.378Z",
+        "lastAccessed": "2025-08-13T14:02:15.378Z"
+    }
+]
